Revise annuity market slides and add SCOMP diagram
Updated and clarified the presentation script in 251203_pitchpizza_transcription_v3.tex, improving explanations of revised offers and empirical evidence. Added figures/tikz/SCOMP_diagram_v4.tex for visual support. Removed auxiliary build files (fdb_latexmk, log) to clean up the repository.

--- a/Ppt/251203_pitchpizza_transcription_v3.tex
+++ b/Ppt/251203_pitchpizza_transcription_v3.tex
@@ -70,11 +70,15 @@ Hi everyone I am Lucas Schmitz and I will present “Equilibrium effects of revi
 
 \subsection*{Slide 2: Motivation} 
 
-\textcolor{orange}{Let me start by motivating the kind of environment I have in mind}. In insurance markets it is common to receive initial offers from a number of firms and then to ask for revised offers an initial offer and then to ask for revised offers. 
+\textcolor{orange}{Let me start by motivating the kind of environment I have in mind}. In insurance markets it is common to receive initial offers from multiple firms. After receiving and comparing this initial offers, consumers can go back to firms that made initial offers 
+and request revised offers from them. 
+
+Where by revised offer I mean a request to a firm for an improved offer. 
+
 
 \vspace{.4cm}
 
-For example, when shopping for mortgage loans banks give consumers a loan estimate and then the consumer can use the LE of one firm to request a revised offer from competing firms. 
+For example, when shopping for mortgage loans banks give consumers a loan estimate and then the consumer can use the LE of one firm to request a revised offer from competing banks. 
 
 
 
@@ -84,29 +88,29 @@ For example, when shopping for mortgage loans banks give consumers a loan estima
 
 Two features are important in this settings. 
 First, requesting a revised offer is costly for consumer. 
-Secondly, when requesting a revised offer to a firm, the consumer reveals the initial offers made by other firms. Which reveal information about the riskiness of the consumer. 
+Secondly, when requesting a revised offer to a firm, the consumer reveals the initial offers made by other firms. In insurance markets, this could be revealing  information about the riskiness of the consumer. 
 %Two important features are requesting a revised offer implies a search cost and, and there is an informational component, because each firm when observing the offers made by the other firms can learn about the riskiness of the consumer. 
 
 
-Hence revised offers have two effects: 
+Hence revised offers could have two effects: 
 
 Related to the first feature: firms can use revised offers to price discriminate. If consumers with lower search costs are also less elastic, firms might make worse offers initially which would be targeted to the high-search inelastic consumers and only later on make good offers to consumers who request a revised offer. 
+
 Secondly, revised offers can reduce informational rents. Given that firms have private information about the consumer, when a firm who is being requested a revised offer observes the initial offers of other firms the firm can update the beliefs about the riskiness of the consumer. 
 
 %Secondly, revised offers can help to reveal information. Firms have private information about the consumer and when making revised offers, firms can observe the initial offers of the other firms. Hence firms can use the offers made by other firms to update their beliefs about the riskiness of the consumer. 
 
+\textcolor{red}{make clearer than a buyer requests loan estimate from multiple firms and only then he requests revised offers. }
 
 \subsection*{Slide 3: this research }
 
+In this paper our goal is to study  the equilibrium effects of revised offers using data from the Chilean annuity market, known as SCOMP.
 
-This research studies the equilibrium impacts of revised offers in a centralized marketplace for annuities in Chile, called ScOMP. 
+This setting offers a unique natural experiment because a recent regulation actually banned the ability, of consumers, to request revised offers.
 
-In particular we 
+The status quo allowed consumers to receive initial offers and then use them to solicit better, 'revised' offers. The regulator argued that this was harming consumers. 
 
-
-This setting is useful to answer our research question because it allows firms to revise their offers, but recently policymakers decided to prohibit offers revisions; and their motivation was that the possibility of revision created incentives for firms to not make their best offers. We study the equilibrium impacts of the elimination of the revised offers. 
-Given this scenario our research question is what is the equilibrium impact of the revised offers. Specifically, what are the welfare implications of prohibiting revised prices. 
-
+To answer our research question, I build a structural model of search and selection with asymmetric information. We plan to use the model to simulate the counterfactual scenario— where revised offers are eliminated  - quantify the welfare effects on consumers.
 
 \subsection*{Slide 4: Literature}
 Skip literature section. 
@@ -115,11 +119,12 @@ Skip literature section.
 
 \subsection*{Slide 6: Setting: annuities}
 
-Before jumping into the institutional context, I will briefly explain what annuities are. They transform a stock of savings into a stream of payments until death. They are commonly bought by retirees to insure against longevity risk - the risk of outliving their savings
-The profits for firm j when selling an annuity can be expressed as shown in the equation: the firm receives the stock of savings S, and pays out a flow F per period, discounted at the firm's financing cost $r_j$. The expected value depends on buyer mortality factors $x_i$.
-I want to note that the expectancy operator is firm dependent because firms have different mortality tables, whereas $x_i$
- is not firm dependent because in our setting all firms observe the same information about the buyer. 
-Firms are heterogeneous along two dimensions: they use different algorithms which are  mortality tables and, they face different financing costs $r_j$. 
+Before jumping into the institutional context, I will briefly explain what annuities are. They transform a stock of savings into a stream of payments until death. They are commonly bought by retirees to insure against longevity risk - the risk of outliving their savings. 
+
+The expected profits for firm j when selling an annuity can be expressed as shown in the equation: the firm receives the stock of savings S, and pays out a flow F per period, discounted at the firm's financing cost $r_j$. Where each payment is weighted by the probability that the buyer is still alive at that time, according to the firm's mortality table.
+
+This equation highlights two dimensions of firm heterogeneity. 
+ they use different algorithms which are  mortality tables and, they face different financing costs $r_j$. 
 
 \subsection*{Slide 7: Setting: SCOMP}
 
@@ -131,6 +136,15 @@ First, only firms which made an initial offer can make a revised offer.
 Secondly, firms cannot lower their initial offer. 
 Thirdly, when requesting a revised offer the buyer is requested the certificate with the initial offers, hence firms are able to observe the initial offers. 
 
+
+
+
+
+
+
+
+
+
 \subsection*{Slide 8: Data }
 
 We observe SCOMP data at the individual level, which means the initial and revised offers and the consumer decision. We do Not observe the request. We also observe the demographics and savings of the buyer. 
@@ -141,58 +155,46 @@ Secondly, we observe the same information about the buyer as the firm, which is 
 \section{Empirical evidence}
 
 \subsection*{Slide 10} 
-To motivate the model I will present four pieces of evidence and connect them to a modeling decision. 
-First, not all buyers request revised offers, which can be rationalized by the existence of search costs. 
-Secondly, in some cases do not choose the highest offer, which can be rationalized by differentiation. 
-Third, there is sorting into firms. This could be caused by different factors, but one possibility is that firms differ in the precision of their algorithm. 
-Finally, the way firms are revising their offers can be rationalized by firm learning 
+To motivate the model I will present two pieces of evidence. 
+
+
+First, there is sorting into firms.
+
+Secondly,  the way firms are revising their offers can be rationalized by firm learning 
 
 \subsection*{Slide 11 }
 
-Let me start with the first piece of evidence: the prevalence and magnitude of revised offers.
-Looking at the left panel, we see the distribution of the number of revised offers a consumer gets. Around 55\% of buyers get exactly one revised offer, while approximately 23\% do not request any revised offers at all. 
-To construct the right figure I took the improvement between the initial and revised offer, and calculated the improvement of that improvement as a share of the monthly wage of the individual. Note that there are many individuals who get one or more months of their wage. 
-This two pieces of evidence, that some buyers do not request revised offers, and that upon requesting individuals get an improvement in their initial offer motivates modeling search costs. 
-
-\subsection*{Slide 12: Product Differentiation}
-
-The second piece of evidence concerns product differentiation. This figure shows the distribution of foregone value - the percentage difference between the highest offer available and the offer the buyer actually chose.
-If buyers only cared about maximizing their annuity payment, we would see a mass point at zero. Instead, we observe substantial dispersion. The average foregone value is 1.57 monthly wages.
-Why might buyers choose lower offers? They likely value other product attributes beyond just the payment amount - things like the insurer's risk rating, brand reputation, customer service, or specific contract features. We can see in the certificate I showed earlier that risk ratings are prominently displayed, suggesting buyers do pay attention to these factors.
-
-\subsection*{Slide 13} 
-
-The third piece of evidence is related to sorting. By risk sorting I mean that in equilibrium firms end up selling to different risk profiles. Two possible causes of sorting are that firms have different screening technologies. Firms with a more precise screening technology could be able to detect which buyers will die earlier and be more aggressive when bidding to those buyers, in that case firms with a noisier screening technology would end up selling to healthier buyers. 
+The first piece of evidence is related to sorting. By risk sorting I mean that in equilibrium firms end up selling to different risk profiles. Two possible causes of sorting are that firms have different screening technologies. Firms with a more precise screening technology could be able to detect which buyers will die earlier and be more aggressive when bidding to those buyers, in that case firms with a noisier screening technology would end up selling to healthier buyers. 
 Another possibility is that the type of the consumer is correlated with their preference. 
 
-\subsection*{Slide 14}
+\subsection*{Slide 12}
 Beyond the specific cause of sorting, in this figure we  can see that there is sorting across firms. Each line displays survival curves for a firm, we can see that firm with the purple line has a higher survival thant the green firm, moreover this differences are statistically significant. One possibility to generate this patterns in the model is to allow different precision in the signal that firms receive. 
 
-\subsection*{Slide 15}
+\subsection*{Slide 13}
 
-The last piece of evidence is that there appears to be learning between the initial and the revised offers. 
+The second piece of evidence is that there appears to be learning between the initial and the revised offers. 
 If, when making the initial offers, firms do not know the offer that the competitors will make. And then before revising their offer they get to see the other offers, since offers are strategic complements, one would expect the improvement to be higher the higher where the other offers. 
 I would like to mention that there is a selection issue because we only observe revised offers and not the requests. Hence this evidence is just suggestive. 
 
-\subsection*{Slide 16 }
+\section{Model}
 
-A second pattern one would expect to observe if firms had uncertainty about other firms prices and if there is a share of buyers who choose the highest offer is that firms would try to just overbid their rivals. 
-This figure shows the revised offer of the firm minus the highest initial offer of the rivals, normalized by the initial offer of the firm. We can observe that there is bunching at 0 which would mean that firms sometimes try to just overbid the highest initial offer. 
+\subsection*{Slide 15}
 
+\textcolor{orange}{To rationalize the empirical patterns we just observed}, I build a model of search and selection with asymmetric information. In this setup, a buyer with a stock of savings $W$ can buy an annuity from one of  $J$ firms. The crucial friction here is information. The buyer has a private mortality risk type $\theta$, firms, do not observe the type. Instead, each firm observes a private, noisy signal $\hat{\theta}_j$ about that risk.The timing of the game mirrors the SCOMP process. First, firms post initial offers based solely on their private signals. Second, the buyer observes these offers and draws an idiosyncratic search cost. They then decide whether to accept one of the initial offers immediately or to pay that search cost to request revised offers. If they choose to search, the game changes significantly because the act of searching reveals the full vector of private signals to all firms, eliminating the information asymmetry between competitors in the aftermarket.
+
+\subsection*{Slide 16: demand and search decision}
+
+The buyer's utility includes a term that represents the utility from the monthly payments, where $F_j
+
+
+
+
+
+\subsection*{Slide 17}
+ 
 \subsection*{Slide 18}
 
-
-
 \subsection*{Slide 19 }
-
-
-
-
-\subsection*{Slide 20}
- 
-\subsection*{Slide 21}
-
-\subsection*{Slide 22 }
 
 
 
